# ScanWise

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  build_release.ps1  configure_release.ps1  install_runtime.ps1
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
app/: CMakeLists.txt
app/winui/: ScanWise.rc  app.cpp  app.hpp  clipboard.cpp  drag_drop.cpp  main.cpp  page_item.cpp  wic_helpers.cpp  wic_helpers.h
engine/include/scanwise/: engine.hpp  filters.hpp  types.hpp
engine/src/: edge_detect.cpp  engine.cpp  export.cpp  filters.cpp  perspective.cpp
engine/tests/: test_engine.cpp
tools/: ScanWise.iss  build_ico.py  build_installer.ps1  make_test_image.ps1  package_portable.ps1  screenshot.ps1  screenshot_final.ps1  validate_real_images.ps1
